// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`layout should handle basic props properly 1`] = `
<div>
  <WithStyles(ForwardRef(Grid))
    container={true}
  >
    <WithStyles(ForwardRef(Grid))
      item={true}
    >
      <Infinite
        className=""
        containerHeight={250}
        displayBottomUpwards={false}
        elementHeight={50}
        handleScroll={[Function]}
        infiniteLoadBeginEdgeOffset={50}
        isInfiniteLoading={false}
        loadingSpinnerDelegate={<div />}
        onInfiniteLoad={[Function]}
        styles={Object {}}
        timeScrollStateLastsForAfterUserScrolls={150}
        useWindowAsScrollContainer={false}
      />
    </WithStyles(ForwardRef(Grid))>
  </WithStyles(ForwardRef(Grid))>
</div>
`;

exports[`layout should handle empty params on rendering authors 1`] = `
<div>
  <WithStyles(ForwardRef(Grid))
    container={true}
  >
    <WithStyles(ForwardRef(Grid))
      item={true}
    >
      <Infinite
        className=""
        containerHeight={250}
        displayBottomUpwards={false}
        elementHeight={50}
        handleScroll={[Function]}
        infiniteLoadBeginEdgeOffset={50}
        isInfiniteLoading={false}
        loadingSpinnerDelegate={<div />}
        onInfiniteLoad={[Function]}
        styles={Object {}}
        timeScrollStateLastsForAfterUserScrolls={150}
        useWindowAsScrollContainer={false}
      />
    </WithStyles(ForwardRef(Grid))>
  </WithStyles(ForwardRef(Grid))>
</div>
`;

exports[`layout should handle missing props properly 1`] = `
<div>
  <WithStyles(ForwardRef(Grid))
    container={true}
  >
    <WithStyles(ForwardRef(Grid))
      item={true}
    >
      <Infinite
        className=""
        containerHeight={250}
        displayBottomUpwards={false}
        elementHeight={50}
        handleScroll={[Function]}
        infiniteLoadBeginEdgeOffset={50}
        isInfiniteLoading={false}
        loadingSpinnerDelegate={<div />}
        onInfiniteLoad={[Function]}
        styles={Object {}}
        timeScrollStateLastsForAfterUserScrolls={150}
        useWindowAsScrollContainer={false}
      />
    </WithStyles(ForwardRef(Grid))>
  </WithStyles(ForwardRef(Grid))>
</div>
`;

exports[`layout should handle missing search keys properly 1`] = `
<div>
  <WithStyles(ForwardRef(Grid))
    container={true}
  >
    <WithStyles(ForwardRef(Grid))
      item={true}
    >
      <Infinite
        className=""
        containerHeight={250}
        displayBottomUpwards={false}
        elementHeight={50}
        handleScroll={[Function]}
        infiniteLoadBeginEdgeOffset={50}
        isInfiniteLoading={false}
        loadingSpinnerDelegate={<div />}
        onInfiniteLoad={[Function]}
        styles={Object {}}
        timeScrollStateLastsForAfterUserScrolls={150}
        useWindowAsScrollContainer={false}
      >
        <WithStyles(ForwardRef(Grid))
          container={true}
          key="0"
        >
          <WithStyles(AuthorItem)
            author={
              Object {
                "rek_author": "Overgaard, Nana H.",
                "rek_author_id": null,
                "rek_author_order": 1,
                "rek_author_pid": "UQ:111111",
              }
            }
            disabled={false}
            index={0}
            key="0"
            linked={false}
            onAuthorSelected={[Function]}
            selected={null}
          />
          <WithStyles(AuthorItem)
            author={
              Object {
                "rek_author": "Cruz, Jazmina L.",
                "rek_author_id": null,
                "rek_author_order": 2,
                "rek_author_pid": "UQ:111111",
              }
            }
            disabled={false}
            index={1}
            key="1"
            linked={false}
            onAuthorSelected={[Function]}
            selected={null}
          />
          <WithStyles(AuthorItem)
            author={
              Object {
                "rek_author": "Bridge, Jennifer A.",
                "rek_author_id": null,
                "rek_author_order": 3,
                "rek_author_pid": "UQ:111111",
              }
            }
            disabled={false}
            index={2}
            key="2"
            linked={false}
            onAuthorSelected={[Function]}
            selected={null}
          />
        </WithStyles(ForwardRef(Grid))>
        <WithStyles(ForwardRef(Grid))
          container={true}
          key="3"
        >
          <WithStyles(AuthorItem)
            author={
              Object {
                "rek_author": "Nel, Hendrik J.",
                "rek_author_id": null,
                "rek_author_order": 4,
                "rek_author_pid": "UQ:111111",
              }
            }
            disabled={false}
            index={3}
            key="3"
            linked={false}
            onAuthorSelected={[Function]}
            selected={null}
          />
          <WithStyles(AuthorItem)
            author={
              Object {
                "rek_author": "Frazer, Ian H.",
                "rek_author_id": null,
                "rek_author_order": 5,
                "rek_author_pid": "UQ:111111",
              }
            }
            disabled={false}
            index={4}
            key="4"
            linked={false}
            onAuthorSelected={[Function]}
            selected={null}
          />
          <WithStyles(AuthorItem)
            author={
              Object {
                "rek_author": "La Gruta, Nicole L.",
                "rek_author_id": null,
                "rek_author_order": 6,
                "rek_author_pid": "UQ:111111",
              }
            }
            disabled={false}
            index={5}
            key="5"
            linked={false}
            onAuthorSelected={[Function]}
            selected={null}
          />
        </WithStyles(ForwardRef(Grid))>
        <WithStyles(ForwardRef(Grid))
          container={true}
          key="6"
        >
          <WithStyles(AuthorItem)
            author={
              Object {
                "rek_author": "Blumenthal, Antje",
                "rek_author_id": null,
                "rek_author_order": 7,
                "rek_author_pid": "UQ:111111",
              }
            }
            disabled={false}
            index={6}
            key="6"
            linked={false}
            onAuthorSelected={[Function]}
            selected={null}
          />
          <WithStyles(AuthorItem)
            author={
              Object {
                "rek_author": "Steptoe, Raymond J.",
                "rek_author_id": null,
                "rek_author_order": 8,
                "rek_author_pid": "UQ:111111",
              }
            }
            disabled={false}
            index={7}
            key="7"
            linked={false}
            onAuthorSelected={[Function]}
            selected={null}
          />
          <WithStyles(AuthorItem)
            author={
              Object {
                "rek_author": "Wells, James W.",
                "rek_author_id": null,
                "rek_author_order": 9,
                "rek_author_pid": "UQ:111111",
              }
            }
            disabled={false}
            index={8}
            key="8"
            linked={false}
            onAuthorSelected={[Function]}
            selected={null}
          />
        </WithStyles(ForwardRef(Grid))>
      </Infinite>
    </WithStyles(ForwardRef(Grid))>
  </WithStyles(ForwardRef(Grid))>
</div>
`;

exports[`layout shows extra small widths correctly (1 per row) 1`] = `
<div>
  <WithStyles(ForwardRef(Grid))
    container={true}
  >
    <WithStyles(ForwardRef(Grid))
      item={true}
    >
      <Infinite
        className=""
        containerHeight={250}
        displayBottomUpwards={false}
        elementHeight={50}
        handleScroll={[Function]}
        infiniteLoadBeginEdgeOffset={50}
        isInfiniteLoading={false}
        loadingSpinnerDelegate={<div />}
        onInfiniteLoad={[Function]}
        styles={Object {}}
        timeScrollStateLastsForAfterUserScrolls={150}
        useWindowAsScrollContainer={false}
      >
        <WithStyles(ForwardRef(Grid))
          container={true}
          key="0"
        >
          <WithStyles(AuthorItem)
            author={
              Object {
                "rek_author": "Overgaard, Nana H.",
                "rek_author_id": null,
                "rek_author_order": 1,
                "rek_author_pid": "UQ:111111",
              }
            }
            disabled={false}
            index={0}
            key="0"
            linked={false}
            onAuthorSelected={[Function]}
            selected={null}
            type="author"
          />
        </WithStyles(ForwardRef(Grid))>
        <WithStyles(ForwardRef(Grid))
          container={true}
          key="1"
        >
          <WithStyles(AuthorItem)
            author={
              Object {
                "rek_author": "Cruz, Jazmina L.",
                "rek_author_id": null,
                "rek_author_order": 2,
                "rek_author_pid": "UQ:111111",
              }
            }
            disabled={false}
            index={1}
            key="1"
            linked={false}
            onAuthorSelected={[Function]}
            selected={null}
            type="author"
          />
        </WithStyles(ForwardRef(Grid))>
        <WithStyles(ForwardRef(Grid))
          container={true}
          key="2"
        >
          <WithStyles(AuthorItem)
            author={
              Object {
                "rek_author": "Bridge, Jennifer A.",
                "rek_author_id": null,
                "rek_author_order": 3,
                "rek_author_pid": "UQ:111111",
              }
            }
            disabled={false}
            index={2}
            key="2"
            linked={false}
            onAuthorSelected={[Function]}
            selected={null}
            type="author"
          />
        </WithStyles(ForwardRef(Grid))>
        <WithStyles(ForwardRef(Grid))
          container={true}
          key="3"
        >
          <WithStyles(AuthorItem)
            author={
              Object {
                "rek_author": "Nel, Hendrik J.",
                "rek_author_id": null,
                "rek_author_order": 4,
                "rek_author_pid": "UQ:111111",
              }
            }
            disabled={false}
            index={3}
            key="3"
            linked={false}
            onAuthorSelected={[Function]}
            selected={null}
            type="author"
          />
        </WithStyles(ForwardRef(Grid))>
        <WithStyles(ForwardRef(Grid))
          container={true}
          key="4"
        >
          <WithStyles(AuthorItem)
            author={
              Object {
                "rek_author": "Frazer, Ian H.",
                "rek_author_id": null,
                "rek_author_order": 5,
                "rek_author_pid": "UQ:111111",
              }
            }
            disabled={false}
            index={4}
            key="4"
            linked={false}
            onAuthorSelected={[Function]}
            selected={null}
            type="author"
          />
        </WithStyles(ForwardRef(Grid))>
        <WithStyles(ForwardRef(Grid))
          container={true}
          key="5"
        >
          <WithStyles(AuthorItem)
            author={
              Object {
                "rek_author": "La Gruta, Nicole L.",
                "rek_author_id": null,
                "rek_author_order": 6,
                "rek_author_pid": "UQ:111111",
              }
            }
            disabled={false}
            index={5}
            key="5"
            linked={false}
            onAuthorSelected={[Function]}
            selected={null}
            type="author"
          />
        </WithStyles(ForwardRef(Grid))>
        <WithStyles(ForwardRef(Grid))
          container={true}
          key="6"
        >
          <WithStyles(AuthorItem)
            author={
              Object {
                "rek_author": "Blumenthal, Antje",
                "rek_author_id": null,
                "rek_author_order": 7,
                "rek_author_pid": "UQ:111111",
              }
            }
            disabled={false}
            index={6}
            key="6"
            linked={false}
            onAuthorSelected={[Function]}
            selected={null}
            type="author"
          />
        </WithStyles(ForwardRef(Grid))>
        <WithStyles(ForwardRef(Grid))
          container={true}
          key="7"
        >
          <WithStyles(AuthorItem)
            author={
              Object {
                "rek_author": "Steptoe, Raymond J.",
                "rek_author_id": null,
                "rek_author_order": 8,
                "rek_author_pid": "UQ:111111",
              }
            }
            disabled={false}
            index={7}
            key="7"
            linked={false}
            onAuthorSelected={[Function]}
            selected={null}
            type="author"
          />
        </WithStyles(ForwardRef(Grid))>
        <WithStyles(ForwardRef(Grid))
          container={true}
          key="8"
        >
          <WithStyles(AuthorItem)
            author={
              Object {
                "rek_author": "Wells, James W.",
                "rek_author_id": null,
                "rek_author_order": 9,
                "rek_author_pid": "UQ:111111",
              }
            }
            disabled={false}
            index={8}
            key="8"
            linked={false}
            onAuthorSelected={[Function]}
            selected={null}
            type="author"
          />
        </WithStyles(ForwardRef(Grid))>
      </Infinite>
    </WithStyles(ForwardRef(Grid))>
  </WithStyles(ForwardRef(Grid))>
</div>
`;

exports[`layout shows normal widths correctly (3 per row) 1`] = `
<div>
  <WithStyles(ForwardRef(Grid))
    container={true}
  >
    <WithStyles(ForwardRef(Grid))
      item={true}
    >
      <Infinite
        className=""
        containerHeight={250}
        displayBottomUpwards={false}
        elementHeight={50}
        handleScroll={[Function]}
        infiniteLoadBeginEdgeOffset={50}
        isInfiniteLoading={false}
        loadingSpinnerDelegate={<div />}
        onInfiniteLoad={[Function]}
        styles={Object {}}
        timeScrollStateLastsForAfterUserScrolls={150}
        useWindowAsScrollContainer={false}
      >
        <WithStyles(ForwardRef(Grid))
          container={true}
          key="0"
        >
          <WithStyles(AuthorItem)
            author={
              Object {
                "rek_author": "Overgaard, Nana H.",
                "rek_author_id": null,
                "rek_author_order": 1,
                "rek_author_pid": "UQ:111111",
              }
            }
            disabled={false}
            index={0}
            key="0"
            linked={false}
            onAuthorSelected={[Function]}
            selected={null}
            type="author"
          />
          <WithStyles(AuthorItem)
            author={
              Object {
                "rek_author": "Cruz, Jazmina L.",
                "rek_author_id": null,
                "rek_author_order": 2,
                "rek_author_pid": "UQ:111111",
              }
            }
            disabled={false}
            index={1}
            key="1"
            linked={false}
            onAuthorSelected={[Function]}
            selected={null}
            type="author"
          />
          <WithStyles(AuthorItem)
            author={
              Object {
                "rek_author": "Bridge, Jennifer A.",
                "rek_author_id": null,
                "rek_author_order": 3,
                "rek_author_pid": "UQ:111111",
              }
            }
            disabled={false}
            index={2}
            key="2"
            linked={false}
            onAuthorSelected={[Function]}
            selected={null}
            type="author"
          />
        </WithStyles(ForwardRef(Grid))>
        <WithStyles(ForwardRef(Grid))
          container={true}
          key="3"
        >
          <WithStyles(AuthorItem)
            author={
              Object {
                "rek_author": "Nel, Hendrik J.",
                "rek_author_id": null,
                "rek_author_order": 4,
                "rek_author_pid": "UQ:111111",
              }
            }
            disabled={false}
            index={3}
            key="3"
            linked={false}
            onAuthorSelected={[Function]}
            selected={null}
            type="author"
          />
          <WithStyles(AuthorItem)
            author={
              Object {
                "rek_author": "Frazer, Ian H.",
                "rek_author_id": null,
                "rek_author_order": 5,
                "rek_author_pid": "UQ:111111",
              }
            }
            disabled={false}
            index={4}
            key="4"
            linked={false}
            onAuthorSelected={[Function]}
            selected={null}
            type="author"
          />
          <WithStyles(AuthorItem)
            author={
              Object {
                "rek_author": "La Gruta, Nicole L.",
                "rek_author_id": null,
                "rek_author_order": 6,
                "rek_author_pid": "UQ:111111",
              }
            }
            disabled={false}
            index={5}
            key="5"
            linked={false}
            onAuthorSelected={[Function]}
            selected={null}
            type="author"
          />
        </WithStyles(ForwardRef(Grid))>
        <WithStyles(ForwardRef(Grid))
          container={true}
          key="6"
        >
          <WithStyles(AuthorItem)
            author={
              Object {
                "rek_author": "Blumenthal, Antje",
                "rek_author_id": null,
                "rek_author_order": 7,
                "rek_author_pid": "UQ:111111",
              }
            }
            disabled={false}
            index={6}
            key="6"
            linked={false}
            onAuthorSelected={[Function]}
            selected={null}
            type="author"
          />
          <WithStyles(AuthorItem)
            author={
              Object {
                "rek_author": "Steptoe, Raymond J.",
                "rek_author_id": null,
                "rek_author_order": 8,
                "rek_author_pid": "UQ:111111",
              }
            }
            disabled={false}
            index={7}
            key="7"
            linked={false}
            onAuthorSelected={[Function]}
            selected={null}
            type="author"
          />
          <WithStyles(AuthorItem)
            author={
              Object {
                "rek_author": "Wells, James W.",
                "rek_author_id": null,
                "rek_author_order": 9,
                "rek_author_pid": "UQ:111111",
              }
            }
            disabled={false}
            index={8}
            key="8"
            linked={false}
            onAuthorSelected={[Function]}
            selected={null}
            type="author"
          />
        </WithStyles(ForwardRef(Grid))>
      </Infinite>
    </WithStyles(ForwardRef(Grid))>
  </WithStyles(ForwardRef(Grid))>
</div>
`;

exports[`layout shows small widths correctly (2 per row) 1`] = `
<div>
  <WithStyles(ForwardRef(Grid))
    container={true}
  >
    <WithStyles(ForwardRef(Grid))
      item={true}
    >
      <Infinite
        className=""
        containerHeight={250}
        displayBottomUpwards={false}
        elementHeight={50}
        handleScroll={[Function]}
        infiniteLoadBeginEdgeOffset={50}
        isInfiniteLoading={false}
        loadingSpinnerDelegate={<div />}
        onInfiniteLoad={[Function]}
        styles={Object {}}
        timeScrollStateLastsForAfterUserScrolls={150}
        useWindowAsScrollContainer={false}
      >
        <WithStyles(ForwardRef(Grid))
          container={true}
          key="0"
        >
          <WithStyles(AuthorItem)
            author={
              Object {
                "rek_author": "Overgaard, Nana H.",
                "rek_author_id": null,
                "rek_author_order": 1,
                "rek_author_pid": "UQ:111111",
              }
            }
            disabled={false}
            index={0}
            key="0"
            linked={false}
            onAuthorSelected={[Function]}
            selected={null}
            type="author"
          />
          <WithStyles(AuthorItem)
            author={
              Object {
                "rek_author": "Cruz, Jazmina L.",
                "rek_author_id": null,
                "rek_author_order": 2,
                "rek_author_pid": "UQ:111111",
              }
            }
            disabled={false}
            index={1}
            key="1"
            linked={false}
            onAuthorSelected={[Function]}
            selected={null}
            type="author"
          />
        </WithStyles(ForwardRef(Grid))>
        <WithStyles(ForwardRef(Grid))
          container={true}
          key="2"
        >
          <WithStyles(AuthorItem)
            author={
              Object {
                "rek_author": "Bridge, Jennifer A.",
                "rek_author_id": null,
                "rek_author_order": 3,
                "rek_author_pid": "UQ:111111",
              }
            }
            disabled={false}
            index={2}
            key="2"
            linked={false}
            onAuthorSelected={[Function]}
            selected={null}
            type="author"
          />
          <WithStyles(AuthorItem)
            author={
              Object {
                "rek_author": "Nel, Hendrik J.",
                "rek_author_id": null,
                "rek_author_order": 4,
                "rek_author_pid": "UQ:111111",
              }
            }
            disabled={false}
            index={3}
            key="3"
            linked={false}
            onAuthorSelected={[Function]}
            selected={null}
            type="author"
          />
        </WithStyles(ForwardRef(Grid))>
        <WithStyles(ForwardRef(Grid))
          container={true}
          key="4"
        >
          <WithStyles(AuthorItem)
            author={
              Object {
                "rek_author": "Frazer, Ian H.",
                "rek_author_id": null,
                "rek_author_order": 5,
                "rek_author_pid": "UQ:111111",
              }
            }
            disabled={false}
            index={4}
            key="4"
            linked={false}
            onAuthorSelected={[Function]}
            selected={null}
            type="author"
          />
          <WithStyles(AuthorItem)
            author={
              Object {
                "rek_author": "La Gruta, Nicole L.",
                "rek_author_id": null,
                "rek_author_order": 6,
                "rek_author_pid": "UQ:111111",
              }
            }
            disabled={false}
            index={5}
            key="5"
            linked={false}
            onAuthorSelected={[Function]}
            selected={null}
            type="author"
          />
        </WithStyles(ForwardRef(Grid))>
        <WithStyles(ForwardRef(Grid))
          container={true}
          key="6"
        >
          <WithStyles(AuthorItem)
            author={
              Object {
                "rek_author": "Blumenthal, Antje",
                "rek_author_id": null,
                "rek_author_order": 7,
                "rek_author_pid": "UQ:111111",
              }
            }
            disabled={false}
            index={6}
            key="6"
            linked={false}
            onAuthorSelected={[Function]}
            selected={null}
            type="author"
          />
          <WithStyles(AuthorItem)
            author={
              Object {
                "rek_author": "Steptoe, Raymond J.",
                "rek_author_id": null,
                "rek_author_order": 8,
                "rek_author_pid": "UQ:111111",
              }
            }
            disabled={false}
            index={7}
            key="7"
            linked={false}
            onAuthorSelected={[Function]}
            selected={null}
            type="author"
          />
        </WithStyles(ForwardRef(Grid))>
        <WithStyles(ForwardRef(Grid))
          container={true}
          key="8"
        >
          <WithStyles(AuthorItem)
            author={
              Object {
                "rek_author": "Wells, James W.",
                "rek_author_id": null,
                "rek_author_order": 9,
                "rek_author_pid": "UQ:111111",
              }
            }
            disabled={false}
            index={8}
            key="8"
            linked={false}
            onAuthorSelected={[Function]}
            selected={null}
            type="author"
          />
        </WithStyles(ForwardRef(Grid))>
      </Infinite>
    </WithStyles(ForwardRef(Grid))>
  </WithStyles(ForwardRef(Grid))>
</div>
`;
